optim: DockerCleanupManager 使用虚拟线程